@@ -1,4 +1,5 @@
-/* mpfr_cosu -- cosu(x) = cos(2*pi*x/u)
+/* mpfr_cosu  -- cosu(x) = cos(2*pi*x/u)
+   mpfr_cospi -- cospi(x) = cos(pi*x)
 
 Copyright 2020 Free Software Foundation, Inc.
 Contributed by the AriC and Caramba projects, INRIA.
@@ -180,4 +181,10 @@ mpfr_cosu (mpfr_ptr y, mpfr_srcptr x, unsigned long u, mpfr_rnd_t rnd_mode)
   mpfr_clear (t);
   MPFR_SAVE_EXPO_FREE (expo);
   return underflow ? inexact : mpfr_check_range (y, inexact, rnd_mode);
+}
+
+int
+mpfr_cospi (mpfr_ptr y, mpfr_srcptr x, mpfr_rnd_t rnd_mode)
+{
+  return mpfr_cosu (y, x, 2, rnd_mode);
 }
